<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/artist_card_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/name_of_artist_txt" />

    <TextView
        android:id="@+id/artist_card_album_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        tools:text="@string/number_of_albums_txt" />

    <TextView
        android:id="@+id/artist_card_song_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        tools:text="@string/number_of_songs_txt" />

</LinearLayout>