<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="6">

    <ImageView
        android:id="@+id/album_card_album_art"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:contentDescription="@string/album_art_txt_description"
        android:scaleType="centerCrop"
        tools:src="@drawable/album_cover_1" />

    <RelativeLayout
        android:id="@+id/album_card_txt_section"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/album_card_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Friday Night Freestyles" />

        <TextView
            android:id="@+id/album_card_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/album_card_album_name"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:text="Fabolous" />

        <TextView
            android:id="@+id/album_card_num_of_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/album_card_artist_name"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:text="@string/number_of_songs_txt" />

        <TextView
            android:id="@+id/album_card_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/album_card_num_of_songs"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:text="@string/duration_txt" />

    </RelativeLayout>

</LinearLayout>